# bootstrapengine

./: .gitignore  CMakeLists.txt
.svn/: all-wcprops  entries
.svn/text-base/: vc_setup.txt.svn-base
BCIF/.svn/: all-wcprops  entries
BCIF/BCIEncode/: BCIEncode.vcproj  jpg.tmp
BCIF/BCIEncode/.svn/: all-wcprops  entries
BCIF/BCIEncode/.svn/text-base/: BCIEncode.sln.svn-base  BCIEncode.suo.svn-base  BCIEncode.vcproj.BS-01.Kevin Bray.user.svn-base
BCIF/BCIEncode/BCIEncode/: archive.cpp  archive.h  bci.cpp  bci.h  main.cpp  zip.cpp  zip.h
BCIF/BCIEncode/BCIEncode/.svn/: all-wcprops  entries
BCIF/BCIEncode/Debug/.svn/: all-wcprops  entries
BCIF/BCIEncode/Release/.svn/: all-wcprops  (+1 more)
BCIF/BCIEncode/data/: blk_000_000.tga  borders02_n.tga  bot_piece_n.tga  chunk_001_003.tga
BCIF/Backup/.svn/: all-wcprops  entries
BCIF/Backup/BCIEncode/: BCIEncode.vcproj  bitarray.cpp  bitarray.h  crc32.cpp  crc32.h  huffman.cpp  huffman.h  lz77.cpp  lz77.h  lzw.cpp  lzw.h  main.cpp  stream.cpp  stream.h  tga.cpp  tga.h
Halo 51/.svn/: all-wcprops  entries
Halo 51/Core/.svn/: all-wcprops  entries
Halo 51/Core/Client/: ClMain.cpp  ClPlatform.h  ClPlatform_Win32.cpp
Halo 51/Core/Editor/: EdImportSourceEngine.cpp  EdImportSourceEngine.h  EdImportSourceEngine_Constants.h  EdImportSourceEngine_OptimizedMeshTypes.h  EdImportSourceEngine_Types.cpp  EdImportSourceEngine_Types.h
Halo 51/Core/Game/: GmAI.cpp  GmAI.h  GmCharacter.cpp  GmCharacter.h  GmConfig.cpp  GmConfig.h  GmEntity.cpp  GmEntity.h  GmEntityMgr.cpp  GmEntityMgr.h  GmInputController.cpp  GmInputController.h  GmObject.cpp  GmObject.h  GmSubsys.cpp  GmSubsys.h  PhAllocator.cpp  PhAllocator.h  PhErrorStream.h  PhStream.cpp  PhStream.h  PhSubsys.cpp  PhSubsys.h
Libs/.svn/: all-wcprops  entries
Libs/.svn/text-base/: ColladaMaya_FREE_3.05A.exe.svn-base  FCollada.dll.svn-base  syncfusion_license.txt.svn-base
ProjectBX/: Output-Build.txt
ProjectBX/.svn/: all-wcprops  entries
ProjectBX/.svn/text-base/: MSSCCPRJ.SCC.svn-base  Makefile.svn-base
ProjectBX/DotNet/.svn/: all-wcprops  entries
ProjectBX/DotNet/Bootstrap/: AssemblyInfo.cpp  BAfx.cpp  Bootstrap.cpp  Bootstrap.h
ProjectBX/DotNet/EditLib/: EdBITree.cpp  EdBITreeInterval.cpp  EdBITreeInterval.h  EdBITreeStack.cpp  EdBITreeStack.h  EdBrush.cpp  EdBrush.h  EdBrushImage.cpp  EdBrushImage.h  EdBrushMgr.cpp  EdBrushMgr.h  EdBrushPalette.cpp  EdBrushPaletteMgr.cpp  EdBrushPaletteMgr.h  EdConfig.h  EdDrawUberTexture.cpp  EdDrawUberTexture.h  EdExprCompiler.cpp  EdImportDAE.cpp  EdImportDAE.h  EdImportDAEAnims.cpp  EdImportDAEAnims.h  EdImportDAEGeometries.cpp  EdImportDAEGeometries.h  EdImportDAEMaterials.cpp  EdImportDAEMaterials.h  EdImportDAEScene.cpp  EdImportDAEScene.h  EdImportOBJ.cpp  EdModelUberizer.cpp  EdModelUberizer.h  EdParse.cpp  EdParse.h  EdPick.cpp  EdPick.h  EdSave.cpp  EdSave.h  EdScriptModifier.cpp  EdScriptModifier.h  EdSettings.cpp  (+10 more)
ProjectBX/DotNet/Editor/: Editor2005.csproj  Program.cs  Reference.cs  UberTexturePainter.cs  Util.cs
ProjectBX/DotNet/EngineManaged/: AABox.cpp  AABox.h  AssemblyInfo.cpp  Brush.cpp  Brush.h  BrushPalette.cpp  BrushPalette.h  Camera.cpp  Camera.h  Color.cpp  Color.h  EMAfx.cpp  EMAfx.h  Engine.cpp  Engine.h  Expr.cpp  Expr.h  Frustum.cpp  Frustum.h  Gizmo.cpp  Gizmo.h  Image.cpp  Image.h  Light.cpp  Light.h  Line.cpp  Line.h  LineSegment.cpp  LineSegment.h  Material.cpp  Material.h  MaterialPass.cpp  MaterialPass.h  Matrix.cpp  Matrix.h  Mesh.cpp  Mesh.h  MeshIB.cpp  MeshIB.h  MeshInst.cpp  (+54 more)
ProjectBX/Engine/.svn/: all-wcprops  entries
ProjectBX/Engine/Common/: .MPlane.cpp.swp  BscArrayTable.cpp  BscArrayTable.h  BscExprLib.cpp  BscExprLib.h  BscLexer.cpp  BscLexer.h  BscParseLib.cpp  BscParseLib.h  BscVarTable.cpp  BscVarTable.h  MAABox.cpp  MCone.cpp  MCone.h  MLine.cpp  MLine.h  MLineSegment.cpp  MMat3x3.cpp  MMat4x4.cpp  MMat4x4.h  MMat4x4Array.cpp  MMat4x4Array.h  MOBox.cpp  MOBox.h  MPlane.cpp  MPlane.h  MQuat.cpp  MRay.cpp  MRay.h  MSVD.cpp  MSVD.h  MSphere.cpp  MSphere.h  MTransform.cpp  MTransform.h  MVec2.cpp  MVec3.cpp  MVec3.h  MVec4.cpp  MVec4.h  (+89 more)
ProjectBX/Engine/FileSystem/: FSConfig.h  FSDiskServ.h  FSDiskServ_W32.cpp  filesystem_afx.cpp  filesystem_afx.h
ProjectBX/Engine/Graphics/: .GrSoftwareRasterizer.cpp.swp  GL.h  GLAux.h  GLSubsys.cpp  GLSubsys.h  GLU.h  GrAfterEffect.cpp  GrAfterEffect.h  GrAnim.cpp  GrAnim.h  GrAnimPlayer.cpp  GrAnimPlayer.h  GrAnimXForm.cpp  GrAnimXFormCache.cpp  GrAnimXFormCache.h  GrBSPArea.cpp  GrBSPArea.h  GrBSPSplit.cpp  GrBSPTree.cpp  GrBSPTree.h  GrBounds.cpp  GrBounds.h  GrCalcTangents.cpp  GrCalcTangents.h  GrCamera.cpp  GrCamera.h  GrColor.cpp  GrColor.h  GrConfig.h  GrCoplanarPolygonGroup.cpp  GrCoplanarPolygonGroup.h  GrDXT.cpp  GrDebug.cpp  GrDebug.h  GrDebugSwitches.cpp  GrDebugSwitches.h  GrDeformMorph.cpp  GrDeformMorph.h  GrDeformWave.cpp  GrDeformWave.h  (+193 more)
ProjectBX/Engine/Test/: Compress.cpp  Compress.h  TGeomCompress.cpp  TGeomCompress.h  TMain.cpp  test_afx.cpp  test_afx.h
ProjectBX/Engine/UberTexture/: UTClient.cpp  UTClient.h  UTConfig.h  UTEncode.cpp  UTMessage.cpp  UTNetUtils.cpp  UTNetUtils.h  UTServer.cpp  UTX.cpp  UTX.h
ProjectBX/Ext/.svn/: all-wcprops  entries
ProjectBX/SDK/Lib/: FileSystemD.lib  UberTextureD.lib
ProjectBX/Samples/.svn/: all-wcprops  entries
ProjectBX/Samples/Win32/: BApp.cpp  BApp.h  Main.cpp  Win32.sln
ProjectBX/Shaders/: Blinn.fsh  Blinn.vsh  Glass.fsh  Glass.vsh  Glass_amb.fsh  Glass_amb.vsh  Metal.gls
ProjectBX/Shaders/.svn/: all-wcprops  entries
ProjectBX/Shaders/HDR/: Blur.fsh  Blur.vsh  BrightPass.fsh  BrightPass.vsh  CalcLum.fsh  CalcLum.vsh  Combine.fsh  Combine.vsh  PassThru.fsh  ToneMap.fsh  ToneMap.vsh
ProjectBX/Shaders/PostProcess/: alphasort.fsh  alphasort.vsh  blur.fsh  glass.fsh  reflect.fsh  reflect.vsh
ProjectBX/Shaders/Uber/: Uber.fsh  Uber.vsh  UberDownSample.fsh  UberDownSample.vsh  UberHash.fsh  UberHash.vsh
ProjectBX/Shaders/VSM/: Depth.fsh  Depth.vsh  DepthMerge.fsh  DepthMerge.vsh  DepthPeel.fsh  DepthPeel.vsh  DepthPeelAlpha.fsh  DepthPeelAlpha.vsh  Indir.fsh  Indir.vsh
(+781 files in other folders)
